crates/aion-awl/tests/fixtures/rev2/header-types/invalid/enum_variant_not_title_case.awl
//! Ping a host and report its status.
workflow ping_host
  input host: String
  outcome reported: type Status, route success

type Status { host: String, alive: Bool }
type Category = urgent | Routine | Spam

worker ping
  action check(host: String) -> Status

step check_host
  host |> check |> route reported
